--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -752,130 +752,127 @@ Detailed information can be found in the \protect\hyperlink{SupplementExplorator
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-The present Registered Report sought to evaluate whether our new Cognitive and Affective Discounting (CAD) paradigm is suitable for determining individual subjective values of the ER strategies strategies distraction, distancing, and suppression.
-We therefore adapted the Cognitive Effort Discounting Paradigm by Westbrook et al.\textsuperscript{29} in a way that allows to determine SVs for tasks that have no objective order of difficulty levels.
+The present Registered Report was designed to assess whether our new Cognitive and Affective Discounting (CAD) paradigm is suitable for determining individual subjective values of the ER strategies strategies distraction, distancing, and suppression.
+We adapted et al.'s\textsuperscript{29} Cognitive Effort Discounting paradigm in a way that allows SVs to be determined for tasks without objective difficulty order.
 The new paradigm was tested on an \emph{n}-back task\textsuperscript{34} and a classic ER paradigm.
 The latter was completed by \(N=120\) participants.
-As expected, use of ER strategies was associated with decreased subjective and physiological arousal.
-This finding is in line with previous meta-analytic findings, indicating the effectiveness of ER strategies, both on subjective as well as physiological levels\textsuperscript{4,5}.
-Further, we found higher levels of subjective cognitive effort for all ER strategies compared to active viewing.
-This allows us to replicate previous findings from our research group and show that the use of strategies is associated with cognitive effort\textsuperscript{22}.
-Both measures also showed great variability between individuals.
-Taken together, this means that the ER strategies had an effect on the participants as intended: Individuals were able to reduce subjective and physiological responding effectively at the expense of cognitive effort.
-We assume that there was a good basis on which individual SVs of ER strategies could be determined.
-All in all, evidence was in favour of hypotheses H1 to H5.
+As expected, the use of ER strategies was associated with reduced subjective and physiological arousal.
+This finding is in line with previous meta-analytic findings indicating the effectiveness of ER strategies, both on subjective as well as physiological levels\textsuperscript{4,5}.
+Furthermore, we found higher levels of subjective cognitive effort for all ER strategies compared to active viewing.
+This allows us to replicate previous findings from our research group and show that strategy use is associated with cognitive effort\textsuperscript{22}.
+Both measures also showed high variability between individuals.
+Taken together, this means that the ER strategies had the intended effect on the participants: Individuals were able to effectively reduce subjective and physiological responding at the expense of cognitive effort.
+We believe that there was a good basis on which individual SVs of ER strategies could be determined.
+Overall, there was evidence to support hypotheses H1 to H5.
 
-Almost all participants showed an absolute preference for one strategy, indicated by an SV of 1.
-We also found a wide range of SVs (between 0.005 and 1.00), suggesting that individuals prefer strategies to different extents.
-There was a significant relationship between SVs and choice of strategy.
-Overly frequent the strategy would be chosen by the persons for whom the highest subjective value had been determined before, which speaks in favour of hypothesis H7.
-Further, we found associations between individual SVs and different predictors.
+Almost all participants showed an absolute preference for a particular strategy, indicated by an SV of 1.
+We also found a wide range of SVs (between 0.005 and 1.00), suggesting that individuals have varying degrees of strategy preference.
+There was a significant relationship between SVs and strategy choice.
+Overly frequent, persons chose the strategy for which the highest subjective value had been determined before, supporting hypothesis H7.
+We also found associations between individual SVs and various predictors.
 Subjective effort, utility, and \emph{corrugator} muscle activity significantly predicted individual SVs.
 Contrary to our hypothesis H6, utility was the best predictor for individual SVs, explaining 15.5 percent of variance in SVs.
-However, individual SVs did not show associations with ER flexibility, we therefore found no evidence for hypothesis H7.
+However, individual SVs did not show associations with self-reported ER flexibility, we therefore found no evidence for hypothesis H7.
 
 \hypertarget{ecological-validity-of-subjective-values-of-er-strategies}{%
 \subsection{Ecological validity of subjective values of ER strategies}\label{ecological-validity-of-subjective-values-of-er-strategies}}
 
-Our goal was to calculate individual subjective values to develop a better understanding of ER stratagem selection.
-Most individuals show great variability in the choice of strategies, both, within-strategy and between-strategy\textsuperscript{17,70,71}.
-Greater variability might even adaptive\textsuperscript{12,17}.
-In addition, a wide variety of factors that influence the choice of strategies in specific situations were examined\textsuperscript{20--22,72--74}, including intensity of the situation and effort.
-However, these factors have often been studied separately.
-Only rarely have effects of the factors been studied in combination\textsuperscript{73}.
-Moreover, the usual paradigms used in ER choice research (e.g., Sheppes et al.\textsuperscript{21}) can only estimate how a factor tends to drive the choice in one direction or the other.
-However, it cannot be determined in this way what internal subjective value individuals attribute to the choice options.
-We are confident that we have succeeded in this with the present paradigm.
-On the one hand, we were able to show which factors influence the values, but on the other hand, we were able to show the actual practical relevance of the values.
-The highest SVs of the individuals were associated with the choice made by the participants.
-Until now, it has been difficult to transfer such findings from the laboratory to everyday life\textsuperscript{72}.
-This may be due to the fact that in laboratory studies, the choice options are often predetermined by the design of the experiment\textsuperscript{20--22}.
-It was therefore attempted to investigate ER choice and influencing factors in everyday life.
-However, even there, certain strategies were often prescribed (for example studies, see English et al.\textsuperscript{75}, Millgram et al.\textsuperscript{76}, Wilms et al.\textsuperscript{72}).
-Although these covered a large area of the emotion-genesis process\textsuperscript{2}, they were nevertheless ultimately fixed.
-Of course, the calculation of SVs in our new CAD paradigm is tied to the strategies with which the strategy of interest is compared.
-However, it would be possible to use ecological momentary assessment to capture ER strategies\textsuperscript{77}.
-This would allow all strategies of the ER repertoire to be recorded for each individual\textsuperscript{12}.
-Also those that are rarely used or even marked as maladaptive, such as alcohol consumption or rumination\textsuperscript{78}.
+Our aim was to calculate individual subjective values in order to develop a better understanding of ER strategy selection.
+Most individuals show large variability in strategy choice, both within-strategy and between-strategy\textsuperscript{17,70,71}.
+Greater variability may even be adaptive\textsuperscript{12,17}.
+In addition, a variety of factors that influence strategy choice in specific situations have been examined\textsuperscript{20--22,72--74}, including situation intensity and effort.
+However, these factors have often been studied in isolation from each other.
+Rarely have their combined effects been investigated\textsuperscript{73}.
+Furthermore, the usual paradigms used in ER choice research (e.g., Sheppes et al.\textsuperscript{21}) can only estimate how a factor tends to drive the choice in one direction or the other.
+They cannot determine the internal subjective value individuals attribute to the choice options.
+We are confident that we have achieved this with the present paradigm.
+On the one hand, we were able to show which factors have an influence the values, and on the other hand, we were able to show the actual practical relevance of the values.
+The highest SVs of the individuals were associated with the choice made by the participants in the last experimental block.
+So far, it has been difficult to transfer such findings from the laboratory to everyday life\textsuperscript{72}.
+This may be because in laboratory studies the choice options are often predetermined by the experimental design\textsuperscript{20--22}.
+Therefore, attempts have been made to investigate ER choice and influencing factors in everyday life, in previous studies.
+Even there, however, certain strategies were often prescribed (for example studies, see English et al.\textsuperscript{75}, Millgram et al.\textsuperscript{76}, Wilms et al.\textsuperscript{72}), although covering a large part of the process of emotion generation\textsuperscript{2}.
+Of course, the calculation of SVs in our new CAD paradigm is similarly tied to the strategies with which the strategy of interest is compared.
+To allow all strategies in the ER repertoire to be recorded for each individual, a study might use ecological momentary assessment\textsuperscript{12,77}.
+This would also capture strategies that are rarely used or even considered maladaptive, such as alcohol consumption or rumination\textsuperscript{78}.
 
-In order to draw a more comprehensive picture on ER, dynamic or cyclic processes have to be considered.
+In order to gain a more comprehensive picture of ER, dynamic or cyclic processes have to be considered.
 The extended process model of emotion regulation\textsuperscript{33} postulates three sequential stages, namely identification, selection, and implementation, to achieve a given goal in a situation.
-If it is determined that the regulation goal is not being achieved, the ER strategy can be maintained, stopped or switched\textsuperscript{33}.
-Importantly, information about the effects of implementing ER strategies influences the choice of ER strategies in future situations, due to contextual feedback even changes the context\textsuperscript{33,79--81}.
-This means that for studies on ER Choice, not only situational factors should be taken into account, but also contextual factors\textsuperscript{80}.
-For example, Murphy and Young\textsuperscript{80} could show that in a classic ER choice paradigm\textsuperscript{21}, strategy selection was significantly influenced by strategy selection and negative affect of the preceding trial.
+If the regulatory goal is not achieved, the ER strategy can be maintained, switched or stopped\textsuperscript{33}.
+Importantly, the information about the success of implementing an ER strategy influences the choice of ER strategies in future situations, because the regulation context is changed through contextual feedback\textsuperscript{33,79--81}.
+This means that studies on ER Choice should consider not only situational factors, but also contextual factors\textsuperscript{80}.
+For example, in a classic ER choice paradigm\textsuperscript{21}, Murphy and Young\textsuperscript{80} showed that strategy choice was significantly influenced by strategy choice and negative affect on the previous trial.
 This provides empirical evidence that experience gained during use of ER strategies influences future choice of ER strategies.
 Our newly developed paradigm also makes an important contribution here.
-The information and experiences that participants gather when using strategies subsequently flow implicitly into the calculation of subjective values.
-That is, because the participants first go through all the strategies and then make the monetary decisions on the basis that they should repeat the strategies again.
-The decisions are made on the basis of the stimulus material that the individuals previously viewed.
-Therefore, the question arises as to how stable these individual SVs are.
+The information and experiences that participants gain while using the strategies in the experimental task might be implicitly incorporated into the subsequent calculation of subjective values.
+That is, the participants first apply all the strategies and then make the monetary decisions while expecting that they should repeat the strategies again.
+This raises the question of how stable these individual SVs are.
 
 \hypertarget{trait-character-of-svs}{%
 \subsection{Trait character of SVs}\label{trait-character-of-svs}}
 
-In order to further assess the relevance of the calculated individual SVs, it would be important to know how stable the values are, i.e.~whether they would show trait character.
-In other words, do the values we calculate represent a stable value within the individual?
+Knowing, whether SVs of ER strategies show a trait character would allow to further evaluate the relevance of the calculated SVs.
+However, whether the calculated values represent a stable value within the individual cannot be concluded from the present study alone.
 This conclusion cannot be drawn from the present study alone.
-The individual SVs computed in our CAD paradigm were assessed in the laboratory in a single situation.
+To establish the \emph{trait} nature of a measure, one could for instance resort to latent state trait modeling\textsuperscript{82}, as recently employed by our group in a related context\textsuperscript{30}
+The individual SVs calculated in our CAD paradigm were assessed in the laboratory in a single situation.
 By definition, this represents a state.
-As previously noted, personal regulation goals, situational factors, and contextual demands influence the choice for or against ER strategies\textsuperscript{21}.
-We belief that these goals, factors and demands also influence individual SVs of ER strategies.
+As noted above, personal regulatory goals, situational factors, and contextual demands influence the choice for or against ER strategies\textsuperscript{21}.
+We belief that these goals, factors, and demands also influence individual SVs of ER strategies.
 Our data presented in this study support this idea.
-However, this also means that SVs should differ according to situational factors (e.g., intensity of stimuli).
-It also must be taken into account which ER goals the individuals are pursuing in a particular situation.
-In our laboratory setting, participants pursue mainly prohedonic goals, but certainly not social goals\textsuperscript{83}.
-Wilms and colleagues\textsuperscript{72} pointed out that ER goals, as well as situational factors, should be treated as states, because both vary strongly among events and situations.
-In another situation, for example outside the laboratory, where an individual is primarily pursuing a social goal, another strategy might appear more helpful and thus have a higher SV.
-It should also be noted that the computation of individual SVs in our CAD paradigm always refers to the alternative strategies that were available to the individuals (see also \protect\hyperlink{Limitations}{Limitations}).
-Therefore, SVs could vary if other reference strategies are used.
-It is conceivable that the subjective values are likely to correlate very highly in situations with similar demands and goals.
-They would thus reflect habits, or habitual use of ER strategies, which has already been attempted to capture by means of questionnaires\textsuperscript{9}.
-The other way round, of course, it is also conceivable that such habits influence the internal formation of these subjective values.
+However, this also implies that SVs should differ according to situational factors (e.g., stimulus intensity).
+The ER goals that individuals pursue in a given situation must also be taken into account.
+In our laboratory setting, participants mainly pursue prohedonic goals, but certainly not social goals\textsuperscript{84}.
+Wilms and colleagues\textsuperscript{72} pointed out that ER goals, as well as situational factors, should be treated as states, because both vary greatly from event to event and situation to situation.
+In a different situation, for example outside the laboratory, where an individual is primarily pursuing a social goal, a different strategy might appear more helpful and thus have a higher SV.
+It should also be noted that the calculation of individual SVs in our CAD paradigm always refers to the alternative strategies that were available to the individuals (see also \protect\hyperlink{Limitations}{Limitations}).
+Therefore, SVs may vary when different reference strategies are used.
+It is conceivable that subjective values are likely to be highly correlated in situations with similar demands and goals.
+They would thus reflect habits or habitual use of ER strategies, which has already been attempted to capture by means of questionnaires\textsuperscript{9}.
+Of course, it is also possible that such habits influence the internal formation of these subjective values.
 However, our data are not suitable for answering this question.
-In future, the SVs should therefore be collected in several similar situations.
+In the future, SVs should therefore be collected in several similar situations.
 Subsequently, the association of the values with each other could be assessed, as well as correlations with relevant external criteria, such as well-being\textsuperscript{9}.
 
 \hypertarget{limitations}{%
 \subsection{Limitations}\label{limitations}}
 
-Our findings must be considered in light of several limitations.
-First, it must be mentioned that a block design was used.
+A number of limitations must be taken into account when considering our findings.
+First, it should be noted that a block design was used.
 This allows for habituation effects of EMG activity within the block.
-However, block designs are common in ER research\textsuperscript{84} and were used in previous studies\textsuperscript{85}.
-Second, it has to be mentioned that subjective arousal, effort, and utility ratings were conducted retrospectively at the end of each block.
-It is also known that affect labeling might attenuate emotional experience\textsuperscript{86,87}.
-That is why we decided not to have the ratings done after every image.
-Furthermore, we were able to confirm our manipulation checks, indicating that implementation of ER strategies was successful, both on subjective and physiological levels.
-Taken together, these two facts may have led to slightly lower associations between SVs and predictors.
+However, block designs are common in ER research\textsuperscript{85} and have been used in previous studies\textsuperscript{86}.
+Secondly, it should be mentioned that subjective arousal, effort, and utility ratings were made retrospectively at the end of each block.
+It is also known that affect labeling can attenuate emotional experience\textsuperscript{87,88}.
+Therefore, we decided not to conduct ratings after each image.
+Furthermore, we were able to confirm that the implementation of ER strategies was successful at both subjective and physiological levels.
+Still, these features of our research design may have led to slightly lower associations between SVs and predictors.
 
-Third, it is a major limitation that participants had to use three given ER strategies.
-It could be that some of the participants did not implement or were used to any of the three strategies in everyday life.
-So it may be that none of the strategies has a really high subjective value for the person.
-However, strategies for attentional deployment, cognitive change, and response modulation were chosen that meta-analytically proved to be most effective\textsuperscript{4}.
-Related to that, individual SVs of each person have to be interpreted with caution.
-They depend on the specific context: The stimulus material presented and the strategies that are compared with each other.
-Thus, it could be that SVs for one ER strategy would be higher or lower when using other stimuli or valences of stimuli and other comparison strategies.
-That is because the computation of SVs is inseparable form the other SVs.
+Third, a major limitation is that participants had to use three prescribed ER strategies.
+It may be that some of the participants were not used to any of these strategies in everyday life.
+So it could be that none of the strategies has a really high subjective value for the person.
+However, the strategies selected for attentional deployment, cognitive change, and response modulation have been shown meta-analytically to be most effective\textsuperscript{4}.
+In this context, the individual SVs of each person must be interpreted with caution.
+They depend on the specific context: The stimuli presented and the strategies compared.
+For example, SVs for an ER strategy might be higher or lower when different stimuli or stimulus valences and different comparison strategies are used, because the calculation of SVs is inseparable form the other SVs.
 
 Fourth, the highest value during the discounting paradigm was set to 2 € as fixed value.
-Participants should imagine that this was the amount of money they would get when they would repeat this strategy.
-Thus, 2 € as an incentive to repeat an entire regulation block could be quite low.
-However, we chose this amount because, first, we have followed the original paradigm of Westbrook\textsuperscript{29}.
-Further it was shown that at least in cognitive effort discounting, a lower incentive could even increase sensitivity in participants for differences in effort\textsuperscript{88}.
-In the future, however, it should be examined how the level of incentives affects subjective values.
+Participants were asked to imagine that this was the amount of money they would receive if they repeated this strategy.
+Thus, 2 € could be quite low as an incentive to repeat an whole experimental block of emotion regulation.
+However, we chose this amount because, firstly, we have followed the original paradigm of Westbrook\textsuperscript{29}.
+Secondly, it has been shown that, at least in the case of cognitive effort discounting, a lower incentive might even increase participants' sensitivity to effort differences\textsuperscript{89}.
+In the future, however, it should be investigated how the level of incentives affects subjective values.
 
 \hypertarget{conclusion}{%
 \subsection{Conclusion}\label{conclusion}}
 
-In order to cope with changing emotional demands, individuals can flexibly select and apply strategies from their repertoire\textsuperscript{12,13}.
-The strategy that is most suitable for dealing with contextual demands and achieving regulatory goals is selected\textsuperscript{12,83}.
-The combination of influencing factors should be reflected in subjective values, which are formed for all alternatives and serve as a basis for decision-making.
-So far, such subjective values for ER strategies have not been determined.
+In order to cope with changing emotional demands, individuals my flexibly select and apply strategies from their repertoire\textsuperscript{12,13}.
+The strategy that is most suitable for coping with contextual demands and achieving regulatory goals is selected\textsuperscript{12,84}.
+The combination of influencing factors should be reflected in subjective values that are formed for all alternatives and serve as a basis for decision-making.
+To date, such subjective values hace not been established for ER strategies.
 Our proposed CAD paradigm contributes to research on ER Choice and ER Flexibility by allowing quantification of these values.
-This provides a more detailed investigation of factors influencing the internal generation of these SVs of ER strategies.
-It seems that it is primarily the perceived usefulness and the effort expended that determine the subjective value attributed to a strategy.
-Finally, further research is needed to investigate the factors influencing subjective values and whether these values represent habitual use of ER strategies by individuals.
+This allows to investigate in more detail the factors influencing the internal generation of these SVs of ER strategies.
+It appears that the subjective value attributed to a strategy is primarily determined by perceived usefulness and the effort.
+Finally, further research is needed to investigate the factors that influence subjective values and whether these values represent habitual use of ER strategies by individuals.
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -1210,44 +1207,48 @@ Finally, further research is needed to investigate the factors influencing subje
 \CSLLeftMargin{81. }%
 \CSLRightInline{Sheppes, G. \href{https://doi.org/10.1016/bs.aesp.2019.09.003}{Transcending the "good \& bad" and "here \& now" in emotion regulation: Costs and benefits of strategies across regulatory stages}. \emph{Advances in Experimental Social Psychology, Vol 61} \textbf{61}, 185--236 (2020).}
 
-\leavevmode\vadjust pre{\hypertarget{ref-Haines2016}{}}%
+\leavevmode\vadjust pre{\hypertarget{ref-Steyer2015}{}}%
 \CSLLeftMargin{82. }%
+\CSLRightInline{Steyer, R., Mayer, A., Geiser, C. \& Cole, D. A. \href{https://doi.org/10.1146/annurev-clinpsy-032813-153719}{A theory of states and traits-revised}. \emph{Annual Review of Clinical Psychology} \textbf{11}, 71--+ (2015).}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Haines2016}{}}%
+\CSLLeftMargin{83. }%
 \CSLRightInline{Haines, S. J. \emph{et al.} \href{https://doi.org/10.1177/0956797616669086}{The wisdom to know the difference: Strategy-situation fit in emotion regulation in daily life is associated with well-being}. \emph{Psychological Science} \textbf{27}, 1651--1659 (2016).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Tamir2016}{}}%
-\CSLLeftMargin{83. }%
+\CSLLeftMargin{84. }%
 \CSLRightInline{Tamir, M. \href{https://doi.org/10.1177/1088868315586325}{Why do people regulate their emotions? A taxonomy of motives in emotion regulation}. \emph{Personality and Social Psychology Review} \textbf{20}, 199--222 (2016).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Barreiros2019}{}}%
-\CSLLeftMargin{84. }%
+\CSLLeftMargin{85. }%
 \CSLRightInline{Barreiros, A. R., Almeida, I., Baia, B. C. \& Castelo-Branco, M. \href{https://doi.org/10.3389/fnhum.2019.00089}{Amygdala modulation during emotion regulation training with fMRI-based neurofeedback}. \emph{Frontiers in Human Neuroscience} \textbf{13}, 89 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Scheffel2019}{}}%
-\CSLLeftMargin{85. }%
+\CSLLeftMargin{86. }%
 \CSLRightInline{Scheffel, C. \emph{et al.} \href{https://doi.org/10.1017/pen.2019.11}{Cognitive emotion regulation and personality: An analysis of individual differences in the neural and behavioral correlates of successful reappraisal}. \emph{Personality Neuroscience} \textbf{2}, e11 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Lieberman2007}{}}%
-\CSLLeftMargin{86. }%
+\CSLLeftMargin{87. }%
 \CSLRightInline{Lieberman, M. D. \emph{et al.} \href{https://doi.org/10.1111/j.1467-9280.2007.01916.x}{Putting feelings into words - affect labeling disrupts amygdala activity in response to affective stimuli}. \emph{Psychological Science} \textbf{18}, 421--428 (2007).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Torre2018}{}}%
-\CSLLeftMargin{87. }%
+\CSLLeftMargin{88. }%
 \CSLRightInline{Torre, J. B. \& Lieberman, M. D. \href{https://doi.org/10.1177/1754073917742706}{Putting feelings into words: Affect labeling as implicit emotion regulation}. \emph{Emotion Review} \textbf{10}, 116--124 (2018).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Bialaszek2017}{}}%
-\CSLLeftMargin{88. }%
+\CSLLeftMargin{89. }%
 \CSLRightInline{Bialaszek, W., Marcowski, P. \& Ostaszewski, P. \href{https://doi.org/ARTN\%20e0182353\%0A10.1371/journal.pone.0182353}{Physical and cognitive effort discounting across different reward magnitudes: Tests of discounting models}. \emph{Plos One} \textbf{12}, (2017).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Preece2020}{}}%
-\CSLLeftMargin{89. }%
+\CSLLeftMargin{90. }%
 \CSLRightInline{Preece, D. A., Becerra, R., Robinson, K. \& Gross, J. J. \href{https://doi.org/10.1080/00223891.2018.1564319}{The emotion regulation questionnaire: Psychometric properties in general community samples}. \emph{J Pers Assess} \textbf{102}, 348--356 (2020).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2010}{}}%
-\CSLLeftMargin{90. }%
+\CSLLeftMargin{91. }%
 \CSLRightInline{Fleischhauer, M. \emph{et al.} \href{https://doi.org/10.1177/0146167209351886}{Same or different? {Clarifying} the relationship of need for cognition to personality and intelligence}. \emph{Personality \& Social Psychology Bulletin} \textbf{36}, 82--96 (2010).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2015}{}}%
-\CSLLeftMargin{91. }%
+\CSLLeftMargin{92. }%
 \CSLRightInline{Fleischhauer, M., Strobel, A. \& Strobel, A. \href{https://doi.org/10.1027/1614-0001/a000161}{Directly and indirectly assessed {N}eed for {C}ognition differentially predict spontaneous and reflective information processing behavior}. \emph{Journal of Individual Differences} \textbf{36}, 101--109 (2015).}
 
 \end{CSLReferences}
@@ -1296,7 +1297,7 @@ The german version of the scale showed a high internal consistency (Cronbach's \
 The 10-item version showed a high internal consistency (Cronbach's \(\alpha=.84\)) and a satisfactory retest-reliability of \(r_{tt}=.81\) across 6 month\textsuperscript{49}.
 
 \emph{Emotion Regulation Questionnaire.} Habitual use of reappraisal and suppression is measured using the 10-item Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,50}.
-The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\))\textsuperscript{89}.
+The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\))\textsuperscript{90}.
 
 \emph{FlexER Scale.} Flexible use of ER strategies is assessed using the FlexER Scale\textsuperscript{44} with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which are answered on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
 Psychometric properties are currently under investigation.
@@ -1305,7 +1306,7 @@ Psychometric properties are currently under investigation.
 4 items such as ``Having to control a strong emotion makes you exhausted and you are less able to manage your feelings right afterwards.'' are rated on a 6-point scale ranging from 1 (fully agree) to 6 (do not agree at all).
 The questionnaire showed an internal consistency of Cronbach's \(\alpha=.87\)\textsuperscript{51}.
 
-\emph{Need for Cognition Scale.} Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale\textsuperscript{52}. Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score. The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{52,90} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks\textsuperscript{91}.
+\emph{Need for Cognition Scale.} Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale\textsuperscript{52}. Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score. The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{52,91} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks\textsuperscript{92}.
 
 \emph{Self-Regulation Scale.} As one measure of self-control, the Self-Regulation Scale (SRS)\textsuperscript{54} is used. The scale has 10 items (e.g., ``It is difficult for me to suppress thoughts that interfere with what I need to do.'', recoded) on a 4-point scale ranging from 1 (not at all true) to 4 (exactly true). It has high internal consistency {[}Cronbach's \(\alpha>.80\);\textsuperscript{54}{]}.
 
