updated Annes source

--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -409,9 +409,10 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
 @article{Gaertner2021,
    author = {Gärtner, A. and Jawinski, P. and Strobel, A.},
    title = {Individual differences in inhibitory control are not related to emotion regulation},
-   journal = {PsyArXiv},
-   DOI = {10.31234/osf.io/cd8rx},
-   year = {2021},
+   journal = {Emotion},
+   volume = {Advance online publication}
+   DOI = {10.1037/emo0001135},
+   year = {2022},
 }
 
 @article{Gonzalez-Garcia2021,
